[tool.poetry]
name = "pyweb-homework-mod-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.5.2"}
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg2 = "^2.9.9"
alembic = "^1.13.0"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
email-validator = "^2.1.0.post1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
